Small changes to the urls to make them more RESTfull
